--- a/mpdconfigure.conf
+++ b/mpdconfigure.conf
@@ -3,21 +3,21 @@
 ## See README for documentation
 
 ## paths 
-MPD_MUSICDIR="/srv/media/music"
-MPD_USERHOMEDIR="/srv/media/mpd"
+#MPD_MUSICDIR="/srv/media/music"
+#MPD_USERHOMEDIR="/srv/media/mpd"
 
 ## troubleshooting
 #DEBUG=1
 #DRYRUN=1
 
 ## sound / alsa
-PREFERREDALSADEVICE="Digital"
+PREFERREDALSADEVICE="USB Audio"
 RESETVOLUME=True
 MASTERVOLUME="0dB" 
 
 ## network
 #MPD_HOST="192.168.1.3"
-ENABLE_ZEROCONF=1
+#ENABLE_ZEROCONF=1
 #ENABLE_LASTFM=1
 #LASTFM_USERNAME="x"
 #LASTFM_PASSWORD="y"
