- Added explanation which mpd.conf parameters will be modified by which preferebnce in mpdconfigure.conf - Fixed using "USB Audio" as the default PREFERREDALSADEVICE.

--- a/mpdconfigure.conf
+++ b/mpdconfigure.conf
@@ -11,13 +11,13 @@
 #DRYRUN=1
 
 ## sound / alsa
-PREFERREDALSADEVICE="USB Audio"
-RESETVOLUME=True
-MASTERVOLUME="0dB" 
+#PREFERREDALSADEVICE="USB Audio"
+#SETVOLUME=True
+#MASTERVOLUME="0dB" 
 
 ## network
 #MPD_HOST="192.168.1.3"
 #ENABLE_ZEROCONF=1
 #ENABLE_LASTFM=1
-#LASTFM_USERNAME="x"
-#LASTFM_PASSWORD="y"
+#LASTFM_USERNAME="someusername"
+#LASTFM_PASSWORD="pasSW0rd"
