- alsa card detection improved - handling of paths improved - debug and dry-run handling fixed

--- a/mpdconfigure.conf
+++ b/mpdconfigure.conf
@@ -1,10 +1,10 @@
 ## settings for mpd-configure
 ## 
-## See README for documentation
+## see README for documentation
 
 ## paths 
 #MPD_MUSICDIR="/srv/media/music"
-#MPD_USERHOMEDIR="/srv/media/mpd"
+#MPD_USERHOMEDIR="/var/lib/mpd"
 
 ## troubleshooting
 #DEBUG=1
