--- a/mpdconfigure.conf
+++ b/mpdconfigure.conf
@@ -1,6 +1,6 @@
 ## settings for mpd-configure
 ## 
-## see README for documentation
+## see README for documentation including default values
 
 ## paths 
 #MPD_MUSICDIR="/srv/media/music"
@@ -12,8 +12,7 @@
 
 ## sound / alsa
 #PREFERREDALSADEVICE="USB Audio"
-#SETVOLUME=True
-#MASTERVOLUME="0dB" 
+#SETALSAVOLUME=True
 
 ## network
 #MPD_HOST="192.168.1.3"
