--- a/mpdconfigure.conf
+++ b/mpdconfigure.conf
@@ -17,7 +17,7 @@
 ## network
 #MPD_HOST="192.168.1.3"
 #ENABLE_ZEROCONF=1
-#ZEROCONF_NAME=Music Player Daemon
+#ZEROCONF_NAME="Music Player Daemon"
 #ENABLE_LASTFM=1
 #LASTFM_USERNAME="someusername"
 #LASTFM_PASSWORD="pasSW0rd"
