--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -1,23 +1,30 @@
 ## settings for mpd-configure
 ## 
 ## see README for documentation including default values
+##
 
-## paths 
+## paths: Debian preferred paths
 #MPD_MUSICDIR="/srv/media/music"
+#MPD_CONFFILE="/etc/mpd.conf"
 #MPD_USERHOMEDIR="/var/lib/mpd"
+#MPD_LOGFILE="/var/log/mpd.log"
+#MPD_PIDFILE="/var/run/mpd.pid"
+#MPD_STATEFILE="/var/cache/mpd.state"
 
 ## troubleshooting
 #DEBUG=1
 #DRYRUN=1
 
 ## sound / alsa
-#PREFERREDALSADEVICE="USB Audio"
-#SETALSAVOLUME=True
+#APLAY_LIMIT_FILTER="usb"
+#APLAY_PREFERRED_FILTER="USB Audio"
 
-## network
-#MPD_HOST="192.168.1.3"
+## network settings
+#MPD_HOST="$(hostname)"
+
 #ENABLE_ZEROCONF=1
 #ZEROCONF_NAME="Music Player Daemon"
+
 #ENABLE_LASTFM=1
 #LASTFM_USERNAME="someusername"
 #LASTFM_PASSWORD="pasSW0rd"
