added tests/samples/cat-stevens-wild-world-hdtracks-24-96.wav to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 cat-stevens-wild-world-hdtracks-24-192.wav
 tests/samples/cat-stevens-wild-world-hdtracks-24-192.wav
+tests/samples/cat-stevens-wild-world-hdtracks-24-96.wav
