Major update and rewrite  * moved `tests/detect-alsa-output-capabilities.sh` to `alsa-capabilities`  * modified `alsa-capabilities` to make it suitable to be sourced or    run from the command line  * added simple and regexp filtering to `alsa-capabilities`  * removed alsa interface detection logic out of `mpd-configure`. This    is now done sourcing `alsa-capabilities`.  * modified `mpd-configure` to not write to a file by default (see    updated `README`)

--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -3,7 +3,7 @@
 ## see README for documentation including default values
 ##
 
-## paths: Debian preferred paths
+## paths: examples are according to Debian guidelines
 #MPD_MUSICDIR="/srv/media/music"
 #MPD_CONFFILE="/etc/mpd.conf"
 #MPD_USERHOMEDIR="/var/lib/mpd"
@@ -15,16 +15,23 @@
 #DEBUG=1
 #DRYRUN=1
 
-## sound / alsa
-#APLAY_LIMIT_FILTER="usb"
-#APLAY_PREFERRED_FILTER="USB Audio"
+## limit the number of interfaces used: example limits to USB Audio
+## Class devices
+#LIMIT_INTERFACE_TYPE="digital"
+#LIMIT_INTERFACE_FILTER="USB Audio"
 
-## network settings
+## network settings: example uses the hostname like returned by
+## `hostname`
 #MPD_HOST="$(hostname)"
 
+## enable zeroconf
 #ENABLE_ZEROCONF=1
+## when zeroconf is enabled (and the name commented out or empty), the
+## script by default uses `MPD through ${ALSA_AIF_DEVLABEL}' as the
+## name for the published service.
 #ZEROCONF_NAME="Music Player Daemon"
 
+## last fm scrobbler
 #ENABLE_LASTFM=1
 #LASTFM_USERNAME="someusername"
 #LASTFM_PASSWORD="pasSW0rd"
