configuration snippets in seperate files

--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -3,35 +3,39 @@
 ## see README for documentation including default values
 ##
 
-## paths: examples are according to Debian guidelines
-#MPD_MUSICDIR="/srv/media/music"
-#MPD_CONFFILE="/etc/mpd.conf"
-#MPD_USERHOMEDIR="/var/lib/mpd"
-#MPD_LOGFILE="/var/log/mpd.log"
-#MPD_PIDFILE="/var/run/mpd.pid"
-#MPD_STATEFILE="/var/cache/mpd.state"
-
 ## troubleshooting
 #DEBUG=1
 #DRYRUN=1
+
+## Defaults to not include commented lines and empty lines from
+## configuration snippets, uncomment to include them
+#INCLUDE_COMMENTS=True
 
 ## limit the number of interfaces used: example limits to USB Audio
 ## Class devices
 #LIMIT_INTERFACE_TYPE="digital"
 #LIMIT_INTERFACE_FILTER="USB Audio"
 
+## paths: examples are according to Debian guidelines
+#CONF_MPD_MUSICDIR="/srv/media/music"
+#CONF_MPD_CONFFILE="/etc/mpd.conf"
+#CONF_MPD_USERHOMEDIR="/var/lib/mpd"
+#CONF_MPD_LOGFILE="/var/log/mpd.log"
+#CONF_MPD_PIDFILE="/var/run/mpd.pid"
+#CONF_MPD_STATEFILE="/var/cache/mpd.state"
+
 ## network settings: example uses the hostname like returned by
 ## `hostname`
-#MPD_HOST="$(hostname)"
+CONF_MPD_HOST="$(hostname)"
 
 ## enable zeroconf
 #ENABLE_ZEROCONF=1
 ## when zeroconf is enabled (and the name commented out or empty), the
 ## script by default uses `MPD through ${ALSA_AIF_DEVLABEL}' as the
 ## name for the published service.
-#ZEROCONF_NAME="Music Player Daemon"
+#CONF_ZEROCONF_NAME="Music Player Daemon"
 
 ## last fm scrobbler
-#ENABLE_LASTFM=1
-#LASTFM_USERNAME="someusername"
-#LASTFM_PASSWORD="pasSW0rd"
+ENABLE_LASTFM=1
+CONF_LASTFM_USERNAME="someusername"
+CONF_LASTFM_PASSWORD="pasSW0rd"
