documented conf snippets

--- a/confs-available/general.conf
+++ b/confs-available/general.conf
@@ -1,6 +1,28 @@
-filesystem_charset  "UTF-8"
-id3v1_encoding      "UTF-8"
-auto_update         "yes"
-replaygain          "off"
-mixer_type          "none"
-max_playlist_length "16777216"
+### mpd configuration snippet for mpd-configure.
+###
+### general parameters, ie not specific to (audio) outputs, (network)
+### inputs or plugins.
+
+## character set used for the filesystem.
+filesystem_charset    "UTF-8"
+
+## character set to which ID3v1 tags are converted to by libid3tag.
+id3v1_encoding        "UTF-8"
+
+## specify logging level for mpd. Can be one of "default" for minimal
+## logging, "secure" to log details about connections to mpd or
+## "verbose" to log debugging information.
+## mpd defaults to "default".
+# log_level "default"
+
+## whether to support automatic update of database when files in
+## music_dir are changed.
+## mpd default to "no".
+auto_update           "yes"
+
+## directory depth being watched for auto_update.
+## mpd defaults to empty, eg. unlimited depth.
+# auto_update_depth     "0"
+
+
+
