--- a/confs-available/network.conf
+++ b/confs-available/network.conf
@@ -1,11 +1,11 @@
+### mpd configuration snippet for mpd-configure.
+###
+### general network settings. 
+### see limits.conf for network resource limits .
+
+
 bind_to_address "${CONF_MPD_HOST}"
 
 ## port to bind to.
 # port "6600"
-
-## close connection to inactive clients after number of seconds.
-# connection_timeout "60"
-
-## maximum number of clients connected at the same time.
-# max_connections "5"
 
