--- a/confs-available/paths.conf
+++ b/confs-available/paths.conf
@@ -1,7 +1,29 @@
+### paths to common configuration parameters
+
+## directory where music is located.
 music_directory     "${CONF_MPD_MUSICDIR}"
-playlist_directory  "${CONF_MPD_PLAYLISTDIR}"
+
+## (required) path to the file where mpd keeps its 'database', usually
+## called `tag_cache`
 db_file             "${CONF_MPD_DBFILE}"
+
+## (required) path to the file where mpd will send its logging to.
 log_file            "${CONF_MPD_LOGFILE}"
+
+## directory where saved playlists are stored.
+playlist_directory  "${CONF_MPD_PLAYLISTDIR}"
+
+## path to the file in which mpd's process ID is stored in.
 pid_file            "${CONF_MPD_PIDFILE}"
+
+## path to the state file in which the status of mpd will be saved.
 state_file          "${CONF_MPD_STATEFILE}"
 
+## path to the sticker database, which manages dynamic information
+## attached to songs.
+sticker_file        "${CONF_MPD_STICKERFILE}"
+
+## use absolute paths for file names in playlists, instead of relative
+## paths.
+## mpd defaults to "no".
+# save_absolute_paths_in_playlists   "yes"
