--- a/confs-available/zeroconf.conf
+++ b/confs-available/zeroconf.conf
@@ -1,4 +1,11 @@
-## start zeroconf section
-zeroconf_enabled    "yes"
+### start zeroconf section
+
+## if set service information will be published with Zeroconf (through
+## avahi or bonjour).
+zeroconf_enabled    "${CONF_ZEROCONF_ENABLED}"
+
+## the service name to publish. The script by default uses `MPD
+## through ${ALSA_AIF_DEVLABEL}' as the name for the published
+## service.
 zeroconf_name       "${CONF_ZEROCONF_LABEL}"
-## end zeroconf section
+
