--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -29,11 +29,11 @@
 CONF_MPD_HOST="$(hostname)"
 
 ## enable zeroconf
-#ENABLE_ZEROCONF=1
+#CONF_ZEROCONF_ENABLED=1
 ## when zeroconf is enabled (and the name commented out or empty), the
 ## script by default uses `MPD through ${ALSA_AIF_DEVLABEL}' as the
 ## name for the published service.
-#CONF_ZEROCONF_NAME="Music Player Daemon"
+#CONF_ZEROCONF_LABEL="Music Player Daemon"
 
 ## last fm scrobbler
 ENABLE_LASTFM=1
