--- a/confs-available/output-audio-alsa.conf
+++ b/confs-available/output-audio-alsa.conf
@@ -1,16 +1,71 @@
-## mpd configuration snippet for mpd-configure
-## alsa audio output section
+### mpd configuration snippet for mpd-configure.
+###
+### Defines an alsa audio output section and other parameters which
+### are important for bit-perfect operation, which are marked with
+### (*). For an understanding of parameters, see source at
+### `./src/output/plugins/AlsaOutputPlugin.cxx'.
+
+## define the audio output
 audio_output {
-	## fixed to alsa: important for bit-perfect playback
+	## fixed to alsa (*)
 	type             "alsa"
 	## name gets filled from script
 	name             "${CONF_ALSA_AIF_DEVLABEL}"
 	## hardware address of interface device gets filled from
-	## script
+	## script (*)
 	device           "${CONF_ALSA_AIF_HWADDRESS}"
-	## no resampling or reformatting: important for bit-perfect
-	## playback
+
+	## do not resample audio samples. mpd default is "yes". (*)
 	auto_resample    "no"
+	## do not convert sample formats. mpd default is "yes". (*)
 	auto_format      "no"
+	## do not do channel conversion. mpd default is "yes". (*)
+	auto_channels    "no"
 }
+
+## adjust playback volume based on replaygain tags using the
+## replaygain library (instead of normal software volume
+## control). should be one of "off", no replaygain, "album" for album
+## based replaygain, "track" for track based replaygain or "auto"
+## which uses `track mode' for random play and `album mode' for normal
+## playback. mpd default is "off". (*)
+# replaygain            "off"
+
+## disable hardware or software volume mixing. (*)
+mixer_type            "none"
+
+
+## size of the audio buffer in kibibytes (KiB), sets libasound's
+## `audio_buffer'. mpd default is perfect and set automagically at
+## beginning of each track in bit perfect mode. (*)
+# audio_buffer_size         "do not use!"
+
+
+## time between hardware sample transfers (in μs) which sets
+## libasound's `period_time'. should be one fourth of the buffer time
+## for high resolution audio. mpd default is perfect and set
+## automagically at beginning of each track in bit perfect mode
+## (buffer_time / 4 = 0.125 seconds). (*)
+#period_time                "do not use!"
+
+
+## length of the hardware sample buffer in microseconds (μs) which
+## sets libasound's buffer_time.
+## mpd default is ok: "500000" μs (ie 0.5 seconds).
+# buffer_time           "500000"
+
+
+## percentage of the audio buffer that will be filled before playing a
+## song. should be increased if you hear skipping when manually
+## changing songs. mpd default is "10%" which seems ok.
+# buffer_before_play  "10%"
+
+
+## set SND_PCM_ACCESS_MMAP_INTERLEAVED to use the same address space
+## to address both memory and I/O devices, instead of seperate
+## (direct) address spaces (SND_PCM_ACCESS_RW_INTERLEAVED). Sometimes
+## needed for resource limited devices like plug computers. mpd
+## default is "no". (*)
+# use_mmap                  "do not use!"
+
 
