removed example lastfm plugin

--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -26,7 +26,7 @@
 
 ## network settings: example uses the hostname like returned by
 ## `hostname`
-CONF_MPD_HOST="$(hostname)"
+#CONF_MPD_HOST="$(hostname)"
 
 ## enable zeroconf
 #CONF_ZEROCONF_ENABLED=1
@@ -36,6 +36,6 @@ CONF_MPD_HOST="$(hostname)"
 #CONF_ZEROCONF_LABEL="Music Player Daemon"
 
 ## last fm scrobbler
-ENABLE_LASTFM=1
-CONF_LASTFM_USERNAME="someusername"
-CONF_LASTFM_PASSWORD="pasSW0rd"
+#ENABLE_LASTFM=1
+#CONF_LASTFM_USERNAME="someusername"
+#CONF_LASTFM_PASSWORD="pasSW0rd"
