--- a/confs-available/client-limits.conf
+++ b/confs-available/client-limits.conf
@@ -1,31 +1,31 @@
 ### mpd configuration snippet for mpd-configure.
+### see `README` in current directory. 
 ### 
-### Set limits to system and network resource usage. For an
-### understanding of parameters, see source at
-### `./src/client/ClientGlobal.cxx'.
+### set limits to system and network resource usage, see
+### source at `./src/client/ClientGlobal.cxx' for documentation.
+###
+
+### ADVANCED USES ONLY
+### in normal circumstances this file should not be necessary.
+
 
 ## close connection to inactive clients after number of seconds.
 ## mpd default is 60. 
-# connection_timeout "60"
+connection_timeout     "${G_CLIENTLIMITS_CONNECTIONTIMEOUT:-60}"
 
+## maximum number of clients connected at the same time. 
+## mpd default is 5.
+max_connections        "${G_CLIENTLIMITS_MAXCONNECTIONS:-20}"
 
-## maximum number of clients connected at the same time. mpd default
-## is 5.
-max_connections "20"
+## maximum number of items in a playlist. 
+## mpd default is "16384" songs (ie ~ 1.300 albums).
+max_playlist_length    "${G_CLIENTLIMITS_MAXPLAYLISTLENGTH:-16777216}"
 
-
-## maximum number of items in a playlist. mpd default is "16384" songs
-## (ie ~ 1.300 albums).
-max_playlist_length   "16777216"
-
-
-## maximum size (in KiB) of a command list. mpd default is "2048" KiB.
-max_command_list_size "20480"
-
+## maximum size (in KiB) of a command list. 
+## mpd default is "2048" KiB.
+max_command_list_size  "${G_CLIENTLIMITS_MAXCOMMANDLISTSIZE:-20480}"
 
 ## maximum size of the output buffer for a mpd client (in KiB). should
-## be four times `max_command_size'. mpd default is ( 4 * 2048 = 8192
-## KiB).
-max_output_buffer_size    "81920"
-
-
+## be four times `max_command_size'. 
+## mpd default is ( 4 * 2048 = 8192 KiB).
+max_output_buffer_size "${G_CLIENTLIMITS_MAXOUTPUTBUFFERSIZE:-81920}"
