--- a/confs-available/general.conf
+++ b/confs-available/general.conf
@@ -1,28 +1,30 @@
 ### mpd configuration snippet for mpd-configure.
-###
+### see `README` in current directory. 
+### 
 ### general parameters, ie not specific to (audio) outputs, (network)
 ### inputs or plugins.
+###
 
 ## character set used for the filesystem.
-filesystem_charset    "UTF-8"
+filesystem_charset    "${G_GENERAL_FILESYSTEMCHARSET:-UTF-8}"
 
 ## character set to which ID3v1 tags are converted to by libid3tag.
-id3v1_encoding        "UTF-8"
+id3v1_encoding        "${G_GENERAL_ID3V1ENCODING:-UTF-8}"
 
 ## specify logging level for mpd. Can be one of "default" for minimal
 ## logging, "secure" to log details about connections to mpd or
 ## "verbose" to log debugging information.
 ## mpd defaults to "default".
-# log_level "default"
+log_level             "${G_GENERAL_LOGLEVEL:-default}"
 
 ## whether to support automatic update of database when files in
 ## music_dir are changed.
 ## mpd default to "no".
-auto_update           "yes"
+auto_update           "${G_GENERAL_AUTOUPDATE:-yes}"
 
 ## directory depth being watched for auto_update.
 ## mpd defaults to empty, eg. unlimited depth.
-# auto_update_depth     "0"
+auto_update_depth     "${G_GENERAL_AUTOUPDATEDEPTH:-0}"
 
 
 
