--- a/confs-available/network.conf
+++ b/confs-available/network.conf
@@ -1,11 +1,13 @@
 ### mpd configuration snippet for mpd-configure.
+### see `README` in current directory. 
+### 
+### general network settings, see `client_limits.conf` for network
+### resource limits.
 ###
-### general network settings. 
-### see limits.conf for network resource limits .
 
+## mpd should listen on this interface.
+bind_to_address "${G_NETWORK_BINDTOADDRESS:-0.0.0.0}"
 
-bind_to_address "${CONF_MPD_HOST}"
-
-## port to bind to.
-# port "6600"
+## mpd should listen on this port.
+port            "${G_NETWORK_PORT:-6600}"
 
