--- a/confs-available/output-audio-alsa.conf
+++ b/confs-available/output-audio-alsa.conf
@@ -1,26 +1,29 @@
 ### mpd configuration snippet for mpd-configure.
-###
+### see `README` in current directory. 
+### 
 ### Defines an alsa audio output section and other parameters which
 ### are important for bit-perfect operation, which are marked with
-### (*). For an understanding of parameters, see source at
-### `./src/output/plugins/AlsaOutputPlugin.cxx'.
+### (*). 
+### see source at `./src/output/plugins/AlsaOutputPlugin.cxx' for
+### documentation.
+###
 
 ## define the audio output
 audio_output {
 	## fixed to alsa (*)
-	type             "alsa"
+	type             "${G_OUTPUTAUDIOALSA_TYPE:-alsa}"
 	## name gets filled from script
-	name             "${CONF_ALSA_AIF_DEVLABEL}"
+	name             "${G_OUTPUTAUDIOALSA_NAME:-${CONF_ALSA_AIF_DEVLABEL}}"
 	## hardware address of interface device gets filled from
 	## script (*)
-	device           "${CONF_ALSA_AIF_HWADDRESS}"
+	device           "${G_OUTPUTAUDIOALSA_DEVICE:-${CONF_ALSA_AIF_HWADDRESS}}"
 
 	## do not resample audio samples. mpd default is "yes". (*)
-	auto_resample    "no"
+	auto_resample    "${G_OUTPUTAUDIOALSA_AUTORESAMPLE:-no}"
 	## do not convert sample formats. mpd default is "yes". (*)
-	auto_format      "no"
+	auto_format      "${G_OUTPUTAUDIOALSA_AUTOFORMAT:-no}"
 	## do not do channel conversion. mpd default is "yes". (*)
-	auto_channels    "no"
+	auto_channels    "${G_OUTPUTAUDIOALSA_AUTOCHANNELS:-no}"
 }
 
 ## adjust playback volume based on replaygain tags using the
@@ -29,43 +32,44 @@ audio_output {
 ## based replaygain, "track" for track based replaygain or "auto"
 ## which uses `track mode' for random play and `album mode' for normal
 ## playback. mpd default is "off". (*)
-# replaygain            "off"
+replaygain                 "${G_OUTPUTAUDIOALSA_REPLAYGAIN:-off}"
 
 ## disable hardware or software volume mixing. (*)
-mixer_type            "none"
+mixer_type                 "${G_OUTPUTAUDIOALSA_MIXERTYPE:-none}"
 
+
+
+### CAUTION: #########################################################
+#   the following settings should normally be left alone for best    #
+#   results; only set them if you know what you're doing             #
+######################################################################
 
 ## size of the audio buffer in kibibytes (KiB), sets libasound's
 ## `audio_buffer'. mpd default is perfect and set automagically at
 ## beginning of each track in bit perfect mode. (*)
-# audio_buffer_size         "do not use!"
-
+audio_buffer_size          "${G_OUTPUTAUDIOALSA_AUDIOBUFFERSIZE}"
 
 ## time between hardware sample transfers (in μs) which sets
 ## libasound's `period_time'. should be one fourth of the buffer time
 ## for high resolution audio. mpd default is perfect and set
 ## automagically at beginning of each track in bit perfect mode
 ## (buffer_time / 4 = 0.125 seconds). (*)
-#period_time                "do not use!"
-
+period_time                "${G_OUTPUTAUDIOALSA_PERIODTIME}"
 
 ## length of the hardware sample buffer in microseconds (μs) which
 ## sets libasound's buffer_time.
 ## mpd default is ok: "500000" μs (ie 0.5 seconds).
-# buffer_time           "500000"
-
+buffer_time                "${G_OUTPUTAUDIOALSA_BUFFERTIME}"
 
 ## percentage of the audio buffer that will be filled before playing a
 ## song. should be increased if you hear skipping when manually
 ## changing songs. mpd default is "10%" which seems ok.
-# buffer_before_play  "10%"
-
+buffer_before_play         "${G_OUTPUTAUDIOALSA_BUFFERBEFOREPLAY}"
 
 ## set SND_PCM_ACCESS_MMAP_INTERLEAVED to use the same address space
 ## to address both memory and I/O devices, instead of seperate
 ## (direct) address spaces (SND_PCM_ACCESS_RW_INTERLEAVED). Sometimes
 ## needed for resource limited devices like plug computers. mpd
 ## default is "no". (*)
-# use_mmap                  "do not use!"
-
+use_mmap                   "${G_OUTPUTAUDIOALSA_USEMMAP}"
 
