--- a/confs-available/paths.conf
+++ b/confs-available/paths.conf
@@ -1,29 +1,34 @@
-### paths to common configuration parameters
+### mpd configuration snippet for mpd-configure.
+### see `README` in current directory. 
+### 
+### common configuration parameters regarding paths used by mpd.
+###
 
-## directory where music is located.
-music_directory     "${CONF_MPD_MUSICDIR}"
+## directory where music is located. scripts defaults to environments
+## `XDG_MUSIC_DIR'.
+music_directory                   "${G_PATHS_MUSICDIRECTORY:-${CONF_MPD_MUSICDIR}}"
 
 ## (required) path to the file where mpd keeps its 'database', usually
 ## called `tag_cache`
-db_file             "${CONF_MPD_DBFILE}"
+db_file                           "${G_PATHS_DBFILE:-${CONF_MPD_DBFILE}}"
 
 ## (required) path to the file where mpd will send its logging to.
-log_file            "${CONF_MPD_LOGFILE}"
+log_file                          "${G_PATHS_LOGFILE:-${CONF_MPD_LOGFILE}}"
 
 ## directory where saved playlists are stored.
-playlist_directory  "${CONF_MPD_PLAYLISTDIR}"
+playlist_directory                "${G_PATHS_PLAYLISTDIRECTORY:-${CONF_MPD_PLAYLISTDIR}}"
 
 ## path to the file in which mpd's process ID is stored in.
-pid_file            "${CONF_MPD_PIDFILE}"
+pid_file                          "${G_PATHS_PIDFILE:-${CONF_MPD_PIDFILE}}"
 
 ## path to the state file in which the status of mpd will be saved.
-state_file          "${CONF_MPD_STATEFILE}"
+state_file                        "${G_PATHS_STATEFILE:-${CONF_MPD_STATEFILE}}"
 
 ## path to the sticker database, which manages dynamic information
 ## attached to songs.
-sticker_file        "${CONF_MPD_STICKERFILE}"
+sticker_file                      "${G_PATHS_STICKERFILE:-${CONF_MPD_STICKERFILE}}"
 
 ## use absolute paths for file names in playlists, instead of relative
 ## paths.
 ## mpd defaults to "no".
-# save_absolute_paths_in_playlists   "yes"
+save_absolute_paths_in_playlists  "${G_PATHS_SAVEABSOLUTEPATHSINPLAYLISTS:-no}"
