--- a/confs-available/plugin-playlist-lastfm.conf
+++ b/confs-available/plugin-playlist-lastfm.conf
@@ -1,5 +1,14 @@
-playlist_plugin {
-    name       "lastfm"
-    user       "${CONF_LASTFM_USERNAME}"
-    password   "${CONF_LASTFM_PASSWORD}"
+### mpd configuration snippet for mpd-configure.
+### see `README` in current directory. 
+### 
+### set preferences for the lastfm scrobbler plugin.
+###
+
+playlist_plugin { 
+    ## name of the playlist in mpd 
+    name       "${G_PLUGINPLAYLISTLASTFM_NAME:-Last FM}"
+    ## username of a lastfm account
+    user       "${G_PLUGINPLAYLISTLASTFM_USER}"
+    ## password of a lastfm account
+    password   "${G_PLUGINPLAYLISTLASTFM_PASSWORD}"
 }
