--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -7,12 +7,12 @@
 #DEBUG=1
 #DRYRUN=1
 
-## Defaults to not include commented lines and empty lines from
-## configuration snippets, uncomment to include them
+## defaults to not include commented lines and empty lines from
+## configuration snippets, uncomment to include them in the output
 #INCLUDE_COMMENTS=True
 
-## limit the number of interfaces used: example limits to USB Audio
-## Class devices
+## limit the number of interfaces used: example limits to 
+## USB Audio Class devices
 #LIMIT_INTERFACE_TYPE="digital"
 #LIMIT_INTERFACE_FILTER="USB Audio"
 
@@ -29,13 +29,9 @@
 CONF_MPD_HOST="$(hostname)"
 
 ## enable zeroconf
-#CONF_ZEROCONF_ENABLED=1
-## when zeroconf is enabled (and the name commented out or empty), the
-## script by default uses `MPD through ${ALSA_AIF_DEVLABEL}' as the
-## name for the published service.
 #CONF_ZEROCONF_LABEL="Music Player Daemon"
 
 ## last fm scrobbler
-ENABLE_LASTFM=1
+
 CONF_LASTFM_USERNAME="someusername"
 CONF_LASTFM_PASSWORD="pasSW0rd"
