--- a/confs-available/zeroconf.conf
+++ b/confs-available/zeroconf.conf
@@ -1,11 +1,15 @@
-### start zeroconf section
+### mpd configuration snippet for mpd-configure.
+### see `README` in current directory. 
+### 
+### start zeroconf section.
+###
 
 ## if set service information will be published with Zeroconf (through
 ## avahi or bonjour).
-zeroconf_enabled    "${CONF_ZEROCONF_ENABLED}"
+zeroconf_enabled    "${G_ZEROCONF_ZEROCONFENABLED:-True}"
 
-## the service name to publish. The script by default uses `MPD
-## through ${ALSA_AIF_DEVLABEL}' as the name for the published
-## service.
-zeroconf_name       "${CONF_ZEROCONF_LABEL}"
-
+## the service name to publish. The script by default uses
+## `MPD through ${ALSA_AIF_DEVLABEL}'
+## as the name for the published service, where ALSA_AIF_DEVLABEL
+## contains the display name of the audio interface.
+zeroconf_name       "${G_ZEROCONF_ZEROCONFNAME:-${CONF_ZEROCONF_LABEL}}"
