updated mpd-configure.conf and README to refelct changes

--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -1,37 +1,34 @@
 ## settings for mpd-configure
 ## 
-## see README for documentation including default values
+## see README for documentation and default values.
 ##
 
-## troubleshooting
+### troubleshooting
+## print extensive information to std_err about the scripts' internal
+## program flow.
 #DEBUG=1
-#DRYRUN=1
-
-## defaults to not include commented lines and empty lines from
-## configuration snippets, uncomment to include them in the output
+## normally commented lines and empty lines from configuration
+## snippets are not included in the output, uncomment to include them
+## in the output.
 #INCLUDE_COMMENTS=True
 
-## limit the number of interfaces used: example limits to 
-## USB Audio Class devices
-#LIMIT_INTERFACE_TYPE="digital"
+### limit audio interfaces returned by `alsa-capabilities`:
+## 1. by filtering on *type*, one of 'analog', digital, or 'usb'.
+#LIMIT_INTERFACE_TYPE="usb"
+## 2. by (additional) filtering on device and/or interface *name*,
+## in the form of a regular expression.
 #LIMIT_INTERFACE_FILTER="USB Audio"
 
 ## paths: examples are according to Debian guidelines
 #CONF_MPD_MUSICDIR="/srv/media/music"
-#CONF_MPD_CONFFILE="/etc/mpd.conf"
 #CONF_MPD_USERHOMEDIR="/var/lib/mpd"
-#CONF_MPD_LOGFILE="/var/log/mpd.log"
-#CONF_MPD_PIDFILE="/var/run/mpd.pid"
-#CONF_MPD_STATEFILE="/var/cache/mpd.state"
 
-## network settings: example uses the hostname like returned by
-## `hostname`
-CONF_MPD_HOST="$(hostname)"
+### additional settings for parameters defined in enabled
+### configuration snippet files (in `./confs-enabled/*.conf`).
 
-## enable zeroconf
-#CONF_ZEROCONF_LABEL="Music Player Daemon"
-
-## last fm scrobbler
-
-CONF_LASTFM_USERNAME="someusername"
-CONF_LASTFM_PASSWORD="pasSW0rd"
+## example for setting the listening address and network port in
+## `network.conf`:
+## 1. mpd.conf parameter: `bind_to_address`
+#G_NETWORK_BINDTOADDRESS="0.0.0.0"
+## 2. mpd.conf parameter: `port`
+#G_NETWORK_PORT="6600"
