Final fixes of auto configuration stuff
. fixes #3
. fixes #5

--- a/confs-available/client-limits.conf
+++ b/confs-available/client-limits.conf
@@ -15,17 +15,21 @@ connection_timeout     "${G_CLIENTLIMITS_CONNECTIONTIMEOUT:-60}"
 
 ## maximum number of clients connected at the same time. 
 ## mpd default is 5.
-max_connections        "${G_CLIENTLIMITS_MAXCONNECTIONS:-20}"
+max_connections        "${G_CLIENTLIMITS_MAXCONNECTIONS:-10}"
 
-## maximum number of items in a playlist. 
+## maximum number of items in a playlist. automatically calculated by
+## the script if the music directory specified with
+## `CONF_MPD_MUSICDIR` in `../mpd-configure.conf` is accessible.
 ## mpd default is "16384" songs (ie ~ 1.300 albums).
-max_playlist_length    "${G_CLIENTLIMITS_MAXPLAYLISTLENGTH:-16777216}"
+max_playlist_length    "${G_CLIENTLIMITS_MAXPLAYLISTLENGTH}"
 
-## maximum size (in KiB) of a command list. 
+## maximum size (in KiB) of a command list. automatically calclulated
+## by script ( G_CLIENTLIMITS_MAXPLAYLISTLENGTH / 8 ).
 ## mpd default is "2048" KiB.
-max_command_list_size  "${G_CLIENTLIMITS_MAXCOMMANDLISTSIZE:-20480}"
+max_command_list_size  "${G_CLIENTLIMITS_MAXCOMMANDLISTSIZE}"
 
 ## maximum size of the output buffer for a mpd client (in KiB). should
-## be four times `max_command_size'. 
+## be four times `max_command_size'. when left empty, the script
+## calculates this.
 ## mpd default is ( 4 * 2048 = 8192 KiB).
-max_output_buffer_size "${G_CLIENTLIMITS_MAXOUTPUTBUFFERSIZE:-81920}"
+max_output_buffer_size "${G_CLIENTLIMITS_MAXOUTPUTBUFFERSIZE}"
