(re) implemented pulseaudio handling

--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -19,6 +19,13 @@
 ## in the form of a regular expression.
 #LIMIT_INTERFACE_FILTER="USB Audio"
 
+### handling of pulseaudio
+##  disable it permanently and stop it if running.
+#OPT_DISABLE_PULSEAUDIO=True
+##  disable and stop pulseaudio temporary during detection of alsa
+##  interfaces while restoring its configuration and run state afterwards.
+#OPT_STOP_PULSEAUDIO=True
+
 ## paths: examples are according to Debian guidelines
 #CONF_MPD_MUSICDIR="/srv/media/music"
 #CONF_MPD_USERHOMEDIR="/var/lib/mpd"
