modified to work with newer alsa-capabilities and added a lot of debugging info

--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -28,7 +28,7 @@
 
 ## paths: examples are according to Debian guidelines
 #CONF_MPD_MUSICDIR="/srv/media/music"
-#CONF_MPD_USERHOMEDIR="/var/lib/mpd"
+#CONF_MPD_HOMEDIR="/var/lib/mpd"
 
 ### additional settings for parameters defined in enabled
 ### configuration snippet files (in `./confs-enabled/*.conf`).
@@ -36,6 +36,6 @@
 ## example for setting the listening address and network port in
 ## `network.conf`:
 ## 1. mpd.conf parameter: `bind_to_address`
-#G_NETWORK_BINDTOADDRESS="0.0.0.0"
+#CONF_MPD_NETWORK_BINDTOADDRESS="0.0.0.0"
 ## 2. mpd.conf parameter: `port`
-#G_NETWORK_PORT="6600"
+#CONF_MPD_NETWORK_PORT="6600"
