smaal change in network port HANDLING

--- a/confs-available/network.conf
+++ b/confs-available/network.conf
@@ -6,8 +6,8 @@
 ###
 
 ## mpd should listen on this interface.
-bind_to_address "${G_NETWORK_BINDTOADDRESS:-0.0.0.0}"
+bind_to_address "${G_NETWORK_BINDTOADDRESS:-${CONF_MPD_NETWORK_ADDRESS}}"
 
 ## mpd should listen on this port.
-port            "${G_NETWORK_PORT:-6600}"
+port            "${G_NETWORK_PORT:-${CONF_MPD_NETWORK_PORT}}"
 
