--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ cat-stevens-wild-world-hdtracks-24-192.wav
 tests/samples/cat-stevens-wild-world-hdtracks-24-192.wav
 tests/samples/cat-stevens-wild-world-hdtracks-24-96.wav
 tests/samples/cat-stevens-wild-world-hdtracks-32-96.wav
-design
+.design
