--- a/confs-available/output-audio-alsa.conf
+++ b/confs-available/output-audio-alsa.conf
@@ -29,6 +29,17 @@ audio_output {
 	## do not do channel conversion. mpd default is "yes". (*)
 	auto_channels    "${G_OUTPUTAUDIOALSA_AUTOCHANNELS:-no}"
 
+	## do not enable replay gain on this audio interface. mpd
+	## default is "software" (*). also see the "replaygain"
+	## and "mixer_type" parameters below.
+	replay_gain_handler "${G_OUTPUTAUDIOALSA_REPLAYGAINHANDLER:-none}"
+
+	## disable hardware or software volume. mpd defaults to
+	## "hardware" for devices which support it, and "none" for
+	## others (*).
+	mixer_type                 "${G_OUTPUTAUDIOALSA_MIXERTYPE:-none}"
+
+
 	### CAUTION: #########################################################
 	#   enabling `dsd_usb` may damage your hardware; only enable it if   #
 	#   you know what you're doing                                       #
@@ -73,9 +84,6 @@ audio_output {
 ## which uses `track mode' for random play and `album mode' for normal
 ## playback. mpd default is "off". (*)
 replaygain                 "${G_OUTPUTAUDIOALSA_REPLAYGAIN:-off}"
-
-## disable hardware or software volume mixing. (*)
-mixer_type                 "${G_OUTPUTAUDIOALSA_MIXERTYPE:-none}"
 
 
 ### CAUTION: #########################################################
