isolated db_file and added database (proxy) plugin

--- a/mpd-configure.conf
+++ b/mpd-configure.conf
@@ -39,3 +39,8 @@
 #CONF_MPD_NETWORK_BINDTOADDRESS="0.0.0.0"
 ## 2. mpd.conf parameter: `port`
 #CONF_MPD_NETWORK_PORT="6600"
+
+## example for specifying a database proxy mpd host in
+## `database-proxy.conf`:
+## 1. mpd.conf database plugin parameter: 
+#CONF_MPD_DATABASEPROXYHOST="myfastmpd.local"
