#31 set default auto_update_depth to the maximum the file system supports

--- a/confs-available/general.conf
+++ b/confs-available/general.conf
@@ -19,12 +19,14 @@ log_level             "${G_GENERAL_LOGLEVEL:-default}"
 
 ## whether to support automatic update of database when files in
 ## music_dir are changed.
-## mpd default to "no".
+## mpd defaults to "no".
 auto_update           "${G_GENERAL_AUTOUPDATE:-yes}"
 
 ## directory depth being watched for auto_update.
-## mpd defaults to empty, eg. unlimited depth.
-auto_update_depth     "${G_GENERAL_AUTOUPDATEDEPTH:-0}"
+## mpd has no default; 0 means no subdirectories, and from mpd
+## viewpoint there's is no upper limit.
+auto_update_depth     "${G_GENERAL_AUTOUPDATEDEPTH:-${CONF_MPD_AUTOUPDATEDEPTH}}"
+
 
 
 
