#31 a bit more explanation

--- a/confs-available/general.conf
+++ b/confs-available/general.conf
@@ -24,7 +24,9 @@ auto_update           "${G_GENERAL_AUTOUPDATE:-yes}"
 
 ## directory depth being watched for auto_update.
 ## mpd has no default; 0 means no subdirectories, and from mpd
-## viewpoint there's is no upper limit.
+## viewpoint there's is no upper limit.  the script sets this
+## automatically to the maximum path depth the filesystem on which the
+## music directory resides.
 auto_update_depth     "${G_GENERAL_AUTOUPDATEDEPTH:-${CONF_MPD_AUTOUPDATEDEPTH}}"
 
 
