--- a/examples/systemd_mpd-configure.service
+++ b/examples/systemd_mpd-configure.service
@@ -15,7 +15,7 @@
 ## Also make sure that the `User` specified below has access to the
 ## target file specified by `CONF_MPD_CONFFILE`.
 ## In this example the first available USB Audio Class playback device
-   recognized by alsa will be used.
+## recognized by alsa will be used.
 ## 
 ## After copying the file it can be managed using systemd. For example
 ## to start it manually:
@@ -28,20 +28,16 @@
 
 [Unit]
 Description=Automatic configuration for mpd
-
 ## make sure sound and network are working
 After=network.target sound.target
-
 ## make sure it runs before mpd is started
 Before=mpd.service
-
 ## instruct systemd that mpd should be started, without it being a
 ## forced requirement. This way the mpd-configure.service remains
 ## independent from the succesful starting of the mpd.service.
 Wants=mpd.service
 
 [Service]
-User=mpd
 Environment="CONF_MPD_MUSICDIR=/srv/media/music"
 Environment="CONF_MPD_HOMEDIR=/var/lib/mpd"
 ExecStart=/var/lib/mpd/mpd-configure/mpd-configure \
